testsuite/tests/dependent/should_fail/T16326_Fail7.stderr

T16326_Fail7.hs:9:13: error: [GHC-25955]
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Use the ‘ExplicitForAll’ extension (implied by ‘RankNTypes’,
                                                     ‘QuantifiedConstraints’, ‘ScopedTypeVariables’,
                                                     ‘LiberalTypeSynonyms’ and ‘ExistentialQuantification’)
      to enable syntax: forall <tvs>. <type>
